# Task-messenger-FastAPI-

./: .env  .env.example  .flake8  .gitignore  .test.env  .test.env.example  Dockerfile  README.md  config.py  docker-compose.yml  help_command  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test-deploy.yml
alembic/: env.py
api/: __init__.py  auth_router.py  system_router.py  task_router.py  user_router.py
core/: dependencies.py
database/: db.py
docker-entrypoint-initdb.d/: init.sql
models/: task_model.py  user_model.py
repository/: auth_repository.py  base_repository.py  task_repository.py  user_repository.py
schemes/: auth_schema.py  task_schema.py  user_schema.py
services/: auth_service.py  task_service.py  user_service.py
tests/test_integration/: conftest.py  test_repository.py
tests/test_unit/: auth_unit_test.py
use_cases/: auth_use_cases.py  task_use_case.py  user_use_cases.py
utils/: celery_app.py  redis_cashe.py  security.py
